Episode 1: Fixes for Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,12 @@ set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 
 if(WIN32)
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /W4 /WX")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /W4")
     set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} /Od /Zi")
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} /O2")
+
+    # Disable warnings for fopen, strcpy, etc.
+    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
 elseif(UNIX)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -pedantic")
     set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0 -g -fno-omit-frame-pointer -fsanitize=signed-integer-overflow,address,undefined")  # memory
@@ -24,6 +27,6 @@ set(SOURCES
     src/file.c
     src/str.c
     src/jit_compiler/jit.c
-)
+    src/os/memory.c)
 add_executable(nox src/main.c ${SOURCES})
 target_include_directories(nox PRIVATE src/)
