--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,7 +6,7 @@ project(test VERSION 0.1 LANGUAGES C CXX)
 cmake_policy(SET CMP0135 NEW)
 
 # GoogleTest requires at least C++14
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 include(FetchContent)
@@ -25,4 +25,7 @@ target_include_directories(lexer PRIVATE ${PROJECT_SOURCE_DIR}/../src)
 target_link_libraries(lexer GTest::gtest_main GTest::gmock_main)
 
 include(GoogleTest)
-gtest_discover_tests(lexer)
+gtest_discover_tests(lexer
+    NO_PRETTY_TYPES
+    EXCLUDE gtest gtest_main gmock gmock_main
+)
