Add references for aarch64 and fixed docker problems with Google test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,5 +32,5 @@ set(SOURCES
     src/os/memory.c)
 add_executable(nox src/main.c ${SOURCES})
 target_include_directories(nox PRIVATE src/)
-target_compile_definitions(nox PRIVATE OUTPUT_JIT="assembly/jit.bin")
+target_compile_definitions(nox PRIVATE OUTPUT_JIT="jit")
 
