Trying docker in Github Actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,16 +17,19 @@ jobs:
             name: "Windows x86-64",
             os: windows-latest,
             run: build\Release\nox.exe,
+            docker: docker\run.bat,
           }
           - {
             name: "Ubuntu x86_64",
             os: ubuntu-latest,
             run: ./build/nox,
+            docker: ./docker/run.sh,
           }
           - {
             name: "MacOSX x86_64",
             os: macos-latest,
             run: ./build/nox,
+            docker: ./docker/run.sh,
           }
     name: ${{ matrix.config.name }}
     runs-on: ${{ matrix.config.os }}
@@ -52,3 +55,6 @@ jobs:
       - name: Run
         working-directory: .
         run: ${{ matrix.config.run }}
+
+      - name: Run docker
+        run: ${{ matrix.config.docker }}
