--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
             name: "Ubuntu x86_64",
             os: ubuntu-latest,
             run: ./build/nox,
-            docker: sudo apt-get update && sudo apt-get upgrade && sudo apt-get install docker.io && sudo service docker start && ./docker/run.sh,
+            docker: sudo apt-get remove docker docker-engine docker.io && sudo apt-get update && sudo apt-get upgrade && sudo apt-get install docker.io && sudo service docker start && ./docker/run.sh,
           }
           - {
             name: "MacOSX x86_64",
@@ -56,5 +56,5 @@ jobs:
         working-directory: .
         run: ${{ matrix.config.run }}
 
-      - name: Run docker
-        run: ${{ matrix.config.docker }}
+#      - name: Run docker
+#        run: ${{ matrix.config.docker }}
