--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,7 +57,7 @@ jobs:
         run: ${{ matrix.config.run }}
 
       - name: Docker
-        uses: ./github/workflows/ # Uses an action in the root directory
+        uses: ./.github/workflows/ # Uses an action in the root directory
 
 #      - name: Run docker
 #        run: ${{ matrix.config.docker }}
