--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,5 +38,5 @@ set(SOURCES
     src/os/memory.c)
 add_executable(nox src/main.c ${SOURCES})
 target_include_directories(nox PRIVATE src/)
-#target_compile_definitions(nox PRIVATE OUTPUT_JIT="jit")
+target_compile_definitions(nox PRIVATE OUTPUT_JIT="jit")
 
