Added more lex testing/fuzzing

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.14)
 project(test VERSION 0.1 LANGUAGES C CXX)
 
 # Use the new policy behaviour for CMP0135 (to suppress warning)
-#cmake_policy(SET CMP0135 NEW)
+cmake_policy(SET CMP0135 NEW)
 
 # GoogleTest requires at least C++14
 set(CMAKE_CXX_STANDARD 17)
@@ -22,7 +22,17 @@ FetchContent_MakeAvailable(googletest)
 
 
 enable_testing()
-add_executable(lexer ../src/lexer/lexer.c lexer.cpp)
+set(SOURCES
+    ${PROJECT_SOURCE_DIR}/../src/lexer/lexer.c
+    ${PROJECT_SOURCE_DIR}/../src/file.c
+    ${PROJECT_SOURCE_DIR}/../src/str.c
+    ${PROJECT_SOURCE_DIR}/../src/args.c
+    ${PROJECT_SOURCE_DIR}/../src/utf8.c
+    ${PROJECT_SOURCE_DIR}/../src/error.c
+    ${PROJECT_SOURCE_DIR}/../src/os/memory.c
+)
+message(STATUS "SOURCES: ${SOURCES}")
+add_executable(lexer ${SOURCES} lexer.cpp)
 target_include_directories(lexer PRIVATE ${PROJECT_SOURCE_DIR}/../src)
 target_link_libraries(lexer GTest::gtest_main GTest::gmock_main)
 
