Added tests, booleans and unary operators

--- a/fuzzing/CMakeLists.txt
+++ b/fuzzing/CMakeLists.txt
@@ -6,22 +6,33 @@ set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 
 
-set(CMAKE_C_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -g -fno-omit-frame-pointer -fsanitize=fuzzer,address,undefined,leak,signed-integer-overflow")
-set(CMAKE_C_FLAGS_RELEASE  "${CMAKE_CXX_FLAGS_RELEASE} -g -fno-omit-frame-pointer -fsanitize=fuzzer,address,undefined,leak,signed-integer-overflow")
+#set(CMAKE_C_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O1 -g -fno-omit-frame-pointer -fsanitize=fuzzer")
+#set(CMAKE_C_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O1 -g -fno-omit-frame-pointer -fsanitize=fuzzer,address")
+set(CMAKE_C_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O1 -fno-omit-frame-pointer -fsanitize=fuzzer,address,leak")
+#set(CMAKE_C_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O1 -g -fno-omit-frame-pointer -fsanitize=fuzzer,address,undefined,leak,signed-integer-overflow")
 
 set(SOURCES
     ../src/lexer/lexer.c
+    ../src/lexer/token.c
     ../src/parser/parser.c
     ../src/type_checker/checker.c
     ../src/code_generator/generator.c
+    ../src/code_generator/disassembler.c
     ../src/interpreter/interpreter.c
+    ../src/logger.c
     ../src/file.c
     ../src/str.c
     ../src/args.c
     ../src/utf8.c
     ../src/error.c
+    ../src/lib.c
+    ../src/memory.c
     ../src/jit_compiler/jit.c
     ../src/os/memory.c
+    ../src/transpiler/c_transpiler.c
+    ../src/parser/visitor.c
+    ../src/parser/ast_printer.c
+    ../src/parser/node.c
 )
 add_executable(fuzzing main.c ${SOURCES})
 target_include_directories(fuzzing PRIVATE ${PROJECT_SOURCE_DIR}/../src)
