--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,8 @@ set(SOURCES
     src/args.c
     src/utf8.c
     src/error.c
+    src/memory.c
+    src/lib.c
     src/jit_compiler/jit.c
     src/os/memory.c
     src/transpiler/c_transpiler.c
