--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ set(SOURCES
     src/parser/visitor.c
     src/parser/ast_printer.c
     src/parser/node.c
+    src/parser/tree.c
 )
 add_executable(nox src/main.c ${SOURCES})
 target_include_directories(nox PRIVATE src/)
