--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ if(WIN32)
     add_definitions(-D_CRT_SECURE_NO_WARNINGS)
 elseif(UNIX)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -pedantic -Wno-c11-extensions -Wno-gnu-binary-literal ")
-    set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0 -g")  # -fsanitize=fuzzer,address,undefined,leak,signed-integer-overflow")  # memory
+    set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0 -g -fsanitize=fuzzer,address,undefined,leak,signed-integer-overflow")  # memory
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -O2")
 endif()
 
@@ -34,20 +34,18 @@ set(SOURCES
     src/code_generator/generator.c
     src/code_generator/disassembler.c
     src/interpreter/interpreter.c
-    src/logger.c
     src/file.c
     src/str.c
     src/args.c
     src/utf8.c
     src/error.c
-    src/lib.c
+    src/allocator.c
     src/jit_compiler/jit.c
     src/os/memory.c
     src/transpiler/c_transpiler.c
     src/parser/visitor.c
     src/parser/ast_printer.c
     src/parser/node.c
-    src/parser/tree.c
 )
 add_executable(nox src/main.c ${SOURCES})
 target_include_directories(nox PRIVATE src/)
