--- a/fuzzing/CMakeLists.txt
+++ b/fuzzing/CMakeLists.txt
@@ -10,11 +10,15 @@ set(CMAKE_C_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -g -fno-omit-frame-pointer
 set(CMAKE_C_FLAGS_RELEASE  "${CMAKE_CXX_FLAGS_RELEASE} -g -fno-omit-frame-pointer -fsanitize=fuzzer,address,undefined,leak,signed-integer-overflow")
 
 set(SOURCES
+    ../src/lexer/token.c
     ../src/lexer/lexer.c
     ../src/parser/parser.c
+    ../src/parser/node.c
+    ../src/parser/visitor.c
     ../src/type_checker/checker.c
     ../src/code_generator/generator.c
     ../src/interpreter/interpreter.c
+    ../src/allocator.c
     ../src/file.c
     ../src/str.c
     ../src/args.c
